Improve build procedure