@@ -9,7 +9,7 @@
 		<version>1.2.00</version>
 	</parent>
 
-	<groupId>cls.atoll.motu</groupId>
+	<groupId>cls.motu</groupId>
 	<artifactId>motu-parent</artifactId>
 	<name>Motu Parent</name>
 	<version>2.6.00-SNAPSHOT</version>
@@ -20,7 +20,7 @@
 
 	<properties>
 
-		<!-- ANT git flow tag prefix - The git tag will be of the form lrit-$version -->
+		<!-- ANT git flow tag prefix - The git tag will be of the form motu-$version -->
 		<gitflow.tagprefix>motu</gitflow.tagprefix>
 
 		<!-- Common properties -->
@@ -34,7 +34,7 @@
 
 		<jdk.source.version>1.7</jdk.source.version>
 		<jdk.source.encoding>UTF-8</jdk.source.encoding>
-		
+
 		<dependencies.version.slf4j>1.7.21</dependencies.version.slf4j>
 		<dependencies.version.log4j>2.5</dependencies.version.log4j>
 		<dependencies.version.spring>2.5.6</dependencies.version.spring>
@@ -69,7 +69,7 @@
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>${dependencies.version.slf4j}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
@@ -444,29 +444,29 @@
 
 			<!-- MOTU -->
 			<dependency>
-				<groupId>cls.atoll.motu</groupId>
+				<groupId>cls.motu</groupId>
 				<artifactId>motu-library-converter</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cls.atoll.motu</groupId>
+				<groupId>cls.motu</groupId>
 				<artifactId>motu-library-cas</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cls.atoll.motu</groupId>
+				<groupId>cls.motu</groupId>
 				<artifactId>motu-library-inventory</artifactId>
 				<version>${project.version}</version>
 			</dependency>
-			<!-- <dependency> <groupId>cls.atoll.motu</groupId> <artifactId>motu-library-misc</artifactId> 
+			<!-- <dependency> <groupId>cls.motu</groupId> <artifactId>motu-library-misc</artifactId> 
 				<version>${project.version}</version> </dependency> -->
 			<dependency>
-				<groupId>cls.atoll.motu</groupId>
+				<groupId>cls.motu</groupId>
 				<artifactId>motu-api-message</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>cls.atoll.motu</groupId>
+				<groupId>cls.motu</groupId>
 				<artifactId>motu-api-rest</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -484,6 +484,9 @@
 
 		<!-- <module>../motu-library-misc</module> -->
 		<module>../motu-web</module>
+		
+		<module>../motu-distribution</module>
+		<module>../motu-scripts</module>
 	</modules>
 
 	<build>
@@ -509,95 +512,4 @@
 
 	</build>
 
-	<!-- <build> <resources> <resource> <directory>src/main/resources</directory> 
-		</resource> </resources> <extensions> <extension> <groupId>org.apache.maven.wagon</groupId> 
-		<artifactId>wagon-ftp</artifactId> <version>1.0-beta-6</version> </extension> 
-		</extensions> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-compiler-plugin</artifactId> <version>2.3</version> <configuration> 
-		<source>${jdk.source.version}</source> <target>${jdk.source.version}</target> 
-		<encoding>${jdk.source.encoding}</encoding> </configuration> </plugin> <plugin> 
-		<groupId>org.apache.maven.plugins</groupId> <artifactId>maven-source-plugin</artifactId> 
-		<version>2.1.1</version> <executions> <execution> <id>bind-sources</id> <goals> 
-		<goal>jar</goal> </goals> </execution> </executions> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-jar-plugin</artifactId> <version>2.3</version> <executions> 
-		<execution> <goals> <goal>test-jar</goal> </goals> </execution> </executions> 
-		</plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-install-plugin</artifactId> 
-		<version>2.3.1</version> <configuration> <createChecksum>true</createChecksum> 
-		</configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-surefire-plugin</artifactId> <version>2.5</version> <configuration> 
-		<skipTests>true</skipTests> </configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-checkstyle-plugin</artifactId> <version>2.2</version> <dependencies> 
-		<dependency> <groupId>cls.atoll</groupId> <artifactId>atoll-build-tools</artifactId> 
-		<version>1.0</version> </dependency> </dependencies> </plugin> <plugin> <groupId>org.codehaus.mojo</groupId> 
-		<artifactId>versions-maven-plugin</artifactId> <version>1.1</version> <configuration> 
-		</configuration> </plugin> </plugins> </build> -->
-
-	<!-- <reporting> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-site-plugin</artifactId> <version>2.1</version> <configuration> 
-		<locales>en</locales> <outputEncoding>UTF-8</outputEncoding> </configuration> 
-		</plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-javadoc-plugin</artifactId> 
-		<version>2.7</version> <configuration> <additionalJOption>-J-Xmx1024m -J-XX:MaxPermSize=512m</additionalJOption> 
-		<aggregate>true</aggregate> <linksource>true</linksource> <tags> <tag> <name>todo</name> 
-		<placement>a</placement> <head>To do:</head> </tag> <tag> <name>pre</name> 
-		<placement>cm</placement> <head>Precondition:</head> </tag> <tag> <name>uc</name> 
-		<placement>t</placement> <head>Use case:</head> </tag> </tags> <links> <link>http://java.sun.com/javase/6/docs/api/</link> 
-		<link>http://java.sun.com/products/servlet/2.5/docs/servlet-2_5-mr2/</link> 
-		<link>http://static.springframework.org/spring/docs/2.5.x/api/</link> <link>http://static.springframework.org/spring-security/site/apidocs/</link> 
-		<link>http://logging.apache.org/log4j/docs/api/</link> <link>http://jakarta.apache.org/commons/logging/apidocs/</link> 
-		<link>http://junit.sourceforge.net/javadoc/</link> <link>http://aopalliance.sourceforge.net/doc/</link> 
-		<link>http://tomcat.apache.org/tomcat-5.5-doc/servletapi/</link> <link>http://tomcat.apache.org/tomcat-5.5-doc/catalina/docs/api/</link> 
-		<link>http://jetty.codehaus.org/jetty/jetty-6/apidocs/</link> <link>http://www.slf4j.org/apidocs/</link> 
-		</links> </configuration> <reportSets> <reportSet> <reports> <report>javadoc</report> 
-		</reports> </reportSet> </reportSets> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-changelog-plugin</artifactId> <version>2.1</version> <configuration> 
-		<type>range</type> <range>90</range> </configuration> </plugin> <plugin> 
-		<groupId>org.apache.maven.plugins</groupId> <artifactId>maven-pmd-plugin</artifactId> 
-		<version>2.5</version> <configuration> <linkXref>true</linkXref> <targetJdk>${jdk.source.version}</targetJdk> 
-		</configuration> </plugin> <plugin> <groupId>org.codehaus.mojo</groupId> 
-		<artifactId>findbugs-maven-plugin</artifactId> <version>2.3</version> <configuration> 
-		<xmlOutput>true</xmlOutput> <effort>Max</effort> </configuration> </plugin> 
-		<plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>jdepend-maven-plugin</artifactId> 
-		<version>2.0-beta-2</version> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-checkstyle-plugin</artifactId> <version>2.2</version> <configuration> 
-		<configLocation>atoll-build-tools/checkstyle-CLS.xml</configLocation> <headerLocation>atoll-build-tools/LICENSE.txt</headerLocation> 
-		</configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-jxr-plugin</artifactId> <version>2.1</version> <configuration> 
-		<aggregate>false</aggregate> </configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-surefire-report-plugin</artifactId> <version>2.5</version> 
-		<configuration> <dependencyLocationsEnabled>false</dependencyLocationsEnabled> 
-		</configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
-		<artifactId>maven-project-info-reports-plugin</artifactId> <version>2.1.2</version> 
-		<configuration> <aggregate>true</aggregate> <dependencyLocationsEnabled>false</dependencyLocationsEnabled> 
-		</configuration> </plugin> <plugin> <groupId>org.codehaus.mojo</groupId> 
-		<artifactId>taglist-maven-plugin</artifactId> <version>2.4</version> <configuration> 
-		<tags> <tag>TODO</tag> <tag>FIXME</tag> <tag>DOCME</tag> <tag>ENVDEV</tag> 
-		<tag>XXX</tag> <tag>@todo</tag> <tag>@deprecated</tag> </tags> </configuration> 
-		</plugin> <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>javancss-maven-plugin</artifactId> 
-		<version>2.0</version> </plugin> </plugins> </reporting> <repositories> <repository> 
-		<id>cls-to-ext-repo</id> <name>CLS External Repository</name> <url>http://mvnrepo-ext.cls.fr/nexus/content/groups/cls-to-altamira-public/</url> 
-		</repository> </repositories> <scm> <connection>scm:svn:https://svn.code.sf.net/p/cls-motu/code/trunk/motu/motu-parent</connection> 
-		<url>https://svn.code.sf.net/p/cls-motu/code/trunk/motu/motu-parent</url> 
-		</scm> <issueManagement> <system>Sourceforge</system> <url>https://sourceforge.net/tracker/?group_id=322177</url> 
-		</issueManagement> <organization> <name>CLS (Collecte Localisation Satelite)</name> 
-		<url>http://www.cls.fr</url> </organization> <licenses> <license> <name>GNU 
-		Lesser General Public License (LGPL)</name> <url>http://www.gnu.org/licenses/lgpl.html</url> 
-		<distribution>repo</distribution> <comments>A business-friendly Open Source 
-		license</comments> </license> </licenses> <developers> <developer> <id>dearith</id> 
-		<name>Didier Earith</name> <email>dearith@cls.fr</email> <organization>Akka 
-		Technologies</organization> <organizationUrl>http://www.akka.eu</organizationUrl> 
-		<roles> <role>Main Developer</role> </roles> <timezone>+1</timezone> <properties 
-		/> </developer> <developer> <id>ccamel</id> <name>Christophe Camel</name> 
-		<email>ccamel@cls.fr</email> <organization>CLS</organization> <organizationUrl>http://www.cls.fr</organizationUrl> 
-		<roles> <role>Architect</role> </roles> <timezone>+1</timezone> <properties 
-		/> </developer> </developers> <contributors> <contributor> <name>Tony Jolibois</name> 
-		<email>tjolibois@cls.fr</email> <organization>CLS</organization> <organizationUrl>http://www.cls.fr</organizationUrl> 
-		<roles> <role>Project Manager</role> </roles> <timezone>+1</timezone> <properties 
-		/> </contributor> </contributors> <profiles> <profile> <id>release-sfnet</id> 
-		<distributionManagement> <site> <id>sfnet-motu-repo</id> <url>scp://shell.sourceforge.net//home/groups/c/cl/cls-motu/htdocs</url> 
-		</site> <repository> <id>sfnet-motu-repo</id> <url>scp://shell.sourceforge.net//home/groups/c/cl/cls-motu/htdocs/m2repo</url> 
-		</repository> </distributionManagement> </profile> <profile> <id>release-cls-nexus</id> 
-		<distributionManagement> <repository> <id>altamira-to-cls-releases</id> <url>http://mvnrepo-ext.cls.fr/nexus/content/repositories/altamira-to-cls-releases</url> 
-		</repository> </distributionManagement> </profile> <profile> <id>release-cls-ftpsedr</id> 
-		<distributionManagement> <repository> <id>cls-ftpsedr-repo</id> <url>ftp://majsedr.cls.fr/donnees/ftpsedr/ftpanonymous/pub/myocean/</url> 
-		</repository> </distributionManagement> </profile> </profiles> -->
 </project>
